--- a/dlicense_codemagic/pubspec.yaml
+++ b/dlicense_codemagic/pubspec.yaml
@@ -21,11 +21,11 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  dio:
+  sqflite:
+  intl:
   path_provider: ^1.6.11
   path:
-  sqflite: ^1.3.1
-  http: ^0.12.1
-  dio: ^3.0.9
   flutter:
     sdk: flutter
 
